update installer script

--- a/installer.iss.in
+++ b/installer.iss.in
@@ -75,6 +75,8 @@ Source: "@PTK_BUILD_OUTPUT_DIR@\Script\oov\@PSDToolKit.anm2"; DestDir: "{app}\..
 Source: "@PTK_BUILD_OUTPUT_DIR@\Script\oov\@PSDToolKit.obj2"; DestDir: "{app}\..\Script\oov"; Flags: ignoreversion
 Source: "@PTK_BUILD_OUTPUT_DIR@\Script\oov\PSDToolKit.lua"; DestDir: "{app}\..\Script\oov"; Flags: ignoreversion
 Source: "@PTK_BUILD_OUTPUT_DIR@\Alias\字幕表示.object"; DestDir: "{app}\..\Alias"; Flags: ignoreversion
+Source: "@PTK_BUILD_OUTPUT_DIR@\Language\English.PSDToolKit.aul2"; DestDir: "{app}\..\Language"; Flags: ignoreversion
+Source: "@PTK_BUILD_OUTPUT_DIR@\Language\简体中文.PSDToolKit.aul2"; DestDir: "{app}\..\Language"; Flags: ignoreversion
 Source: "@PTK_BUILD_OUTPUT_DIR@\PSDToolKit.txt"; DestDir: "{app}"; Flags: ignoreversion
 
 ; [InstallDelete]
